changed animations for mobile compatibility, fixed svg issue on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,8 @@
     --color-vision: #4dc8ff;
     --color-values: #ff9f4d;
 
-    --breakpoint-3xl: 120rem;
+    --breakpoint-xs: 400px;
+    --breakpoint-3xl: 1920px;
 }
 
 html {
